--- a/src/searchlib/searchlib.csproj
+++ b/src/searchlib/searchlib.csproj
@@ -7,5 +7,8 @@
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00004" />
     <PackageReference Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00004" />
     <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00004" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 </Project>
